@@ -1,7 +1,7 @@
 /**
  @page License License
  
-Copyright (c) 2002-2012 Lee Salzman
+Copyright (c) 2002-2013 Lee Salzman
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
